styles/components/header.scss
@import "compass";

@import "../breakpoints";
@import "../spacing";

header {
    @include display-flex;
    margin-left: $body-margin;
    margin-right: $body-margin;
    padding: 25px 0;
    position: absolute;
    width: calc(100% - #{2 * $body-margin});
    z-index: 100;

    @include respond-to('tablet-down') {
        background-color: rgba(118, 16, 105, 0.5);
        display: block;
        height: $header-height;
        margin: 0;
        padding: 0;
        position: fixed;
        width: 100%;
    }

    h1 {
        @include flex(0 0 auto);
        width: 20%;

        @include respond-to('tablet-down') {
            float: none;
            height: 100%;
            margin: 0 auto;
            width: 25%;
        }
    }

    .logo-link {
        background-image: url(/img/logo.png);
        background-position: center center;
        background-repeat: no-repeat;
        background-size: contain;
        display: inline-block;
        height: 63px;
        width: 100%;

        @include respond-to('tablet-down') {
            height: 80%;
            margin-top: 5%;
        }
    }

    .header-menu {
        @include respond-to('tablet-down') {
            background-color: rgba(118, 16, 105, 0.5);
            height: 0;
            overflow: hidden;
            transition: 1s ease all;
            width: 100%;
        }
    }

    &.menu-open {
        .header-menu {
            height: 50vh;
        }
    }

    .header-menu-inner {
        @include flex(1 1 auto);
        @include display-flex;
        padding: 15px;

        @include respond-to('tablet-down') {
            display: block;
        }
    }

    .navbar {
        @include flex(0 0 auto);
        margin-left: 20px;
        margin-top: 20px;

        @include respond-to('tablet-down') {
            float: none;
            margin: 0;
            width: 100%;
        }
    }

    .search {
        @include flex(1 1 auto);
        margin-left: 20px;
        margin-top: 20px;

        @include respond-to('tablet-down') {
            float: none;
            margin: 0 auto;
            width: 150px;
        }
    }

    .header-menu-button {
        cursor: pointer;
        display: none;
        float: right;
        height: 50px;
        position: absolute;
        right: 25px;
        top: 25px;
        width: 30px;

        &-line {
            background: white;
            border-radius: 10%;
            height: 5px;
            margin: 4px 0;
            width: 100%;
        }

        @include respond-to('tablet-down') {
            display: block;
        }
    }
}

